bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: type string
var message:string
            ^BDR2:1: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var message:string
    ^BDR2:1: error: local variables must be initialized
var message:string
    ^BDR2:4: error: not found: value letter
  letter match {
  ^BDR2:5: error: not found: value ==
    case message== "R" => right() ; forward()
                ^BDR2:6: error: not found: value ==
    case message== "L" => left() ; forward()
                ^BDR2:7: error: not found: value ==
    case message== "I" => right() ; forward()
                ^BDR2:8: error: not found: value ==
    case message== "A" => forward()
                ^BDR2:9: error: not found: value ==
    case message== "B" => forward() ; forward()
                ^BDR2:10: error: not found: value ==
    case message== "C" => forward();forward();forward();
                ^BDR2:11: error: not found: value ==
    case message== "D" => forward();forward();forward();forward()
                ^BDR2:12: error: not found: value ==
    case message== "E" =>forward();forward();forward();forward();forward()
                ^BDR2:13: error: not found: value ==
    case message== "F" =>forward();forward();forward();forward();forward();forward()
                ^BDR2:14: error: not found: value ==
    case message== "Z" => backward()
                ^BDR2:15: error: not found: value ==
    case message== "Y" => backward();backward()
                ^BDR2:16: error: not found: value ==
    case message== "X" => backward();backward();backward()
                ^BDR2:17: error: not found: value ==
    case message== "W" =>backward();backward();backward();backward()
                ^BDR2:18: error: not found: value ==
    case message== "V" =>backward();backward();backward();backward();backward()
                ^BDR2:19: error: not found: value ==
    case message== "U" =>backward();backward();backward();backward();backward();backward()
                ^